Update CoordinateSystem.LEFT_OPEN to CoordinateSystem.zeroBased() where possible.